Creacion de Tabla de simbolos estatica y manual de usuario